k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afeto-sac
  labels:
    name: afeto-sac
